---------------------------------------------------------------------------------------------------
Version: 0.6.006
Date: 2024-12-01
  The im gonna squeak through to the loonybin Update:

  Fixes:
    - Fixed Squeakthrough 2 having an issue with PM.
---------------------------------------------------------------------------------------------------
Version: 0.6.005
Date: 2024-12-01
  The it could be better, it could be worse Update:

  Additions:
    - New Ezekiel and TM leeching icons.

  Changes:
    - Reverted to the 1.0 system of TM and Ezekiel leeching technologies.
    - Moved explosives into their own subgroup.
    - Changed express splitters to take 4 processing units instead of 6.

  Fixes:
    - Fixed gunpowder recipe not being in a subgroup.
    - Fixed hydrogen peroxide not being in a subgroup.

---------------------------------------------------------------------------------------------------
Version: 0.6.004
Date: 2024-11-30
  The new content guys! jangle jangle! Update:

  Additions:
    - Added an early game way to grow wood. Not using pills.
    - Actually added the yttrium plastic pellet recipe. whoops! it'll be moved into its own technology.. soon...

  Changes:
    - Moved the saw into the intermediates tab.
  Fixes:
    - ACTUTALLY fixed dirty boilers fluid boxes being fucked.
    - Added locales for chunk plate recipes.
    - Fixed depleted uranium fuel cells not being in the correct subgroup.
    - Made byproduct handling take the correct science packs.
    - Added essenitally every locale missing.
    - Migrated a lot of recipes to make said locales easier.
    - Moved garnet saws, hydrogen peroxide and atmosphere recipes into subgroups.
    - Fixed the best recipe of water electrolysis not being disabled by default.

---------------------------------------------------------------------------------------------------
Version: 0.6.003
Date: 2024-11-30
  The I WANT ONE Update:

  Fixes: